--- a/vanilla-js/package.json
+++ b/vanilla-js/package.json
@@ -6,6 +6,7 @@
     "build": "parcel build"
   },
   "devDependencies": {
-    "parcel": "^2.0.1"
+    "parcel": "^2.0.1",
+    "tailwindcss": "^3.0.6"
   }
 }
