--- a/vanilla-js/package.json
+++ b/vanilla-js/package.json
@@ -2,11 +2,19 @@
   "name": "my-project",
   "source": "src/index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "npm-run-all --parallel watch:start watch:css",
+    "watch:start": "parcel serve src/index.html",
+    "watch:css": "tailwindcss -i src/app.css -o src/assets/tailwind/tailwind.css -w"
   },
   "devDependencies": {
     "parcel": "^2.0.1",
     "tailwindcss": "^3.0.6"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.13",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
+    "postcss-import": "^14.0.2"
   }
 }
